@@ -1,3 +1,9 @@
+2002-03-30  Junichi Uekawa  <dancer@debian.org>
+
+	* libdshconfig.h: added dshconfig_searchdata
+
+	* libdshconfig.c (dshconfig_searchdata): added
+
 2002-03-28  Junichi Uekawa  <dancer@debian.org>
 
 	* libdshconfig.h: added declaration for dshconfig_splitline.
